--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
       </div>
     </div>
     <script src="src/index.js"></script>
+
+    <a href= "https://github.com/CircleThinker/SheCodes-Plus-Public" class = "github">Github link </a>
   </body>
 </html>
-//https://github.com/CircleThinker/SheCodes-Plus-Public
